--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     },
     "dependencies": {
         "@myshell/alvue": "^0.3.4",
+        "apexcharts": "^3.22.3",
         "sweetalert2": "^10.10.4",
+        "vue-apexcharts": "^1.6.0",
         "vue-flatpickr-component": "^8.1.6",
         "vue-js-modal": "^2.0.0-rc.6",
         "vue-select": "^3.10.8",
